# OVITO_modify_source

./: .gitignore  Ovito在Windows上的编译步骤.md  README.md  code_diff.patch  makediff.bsh  old_compilation.txt  ovito.nsi  ovito.patch  ovito3.10.6.nsi  ovito3.11.0-dev-nomark.nsi  run_ovito3.0.0.py  vcpkg.json
ovito-v3.10.6-modified-source/: CMakeLists.txt  README.md  cmake-variants.json
ovito-v3.10.6-modified-source/cmake/: FindFFMPEG.cmake  FindNetCDF.cmake  FixupMacBundle.cmake  OVITOConfig.cmake  Plugins.cmake  Prerequisites.cmake  Version.cmake  wasm.cmake
ovito-v3.10.6-modified-source/doc/develop/: contributor_license_agreement.md
ovito-v3.10.6-modified-source/doc/manual/: CMakeLists.txt  conf.py  index.rst  installation.rst  introduction.rst  new_features.rst  ovito_pro.rst  spelling_wordlist.txt  sphinx-build.py
ovito-v3.10.6-modified-source/doc/manual/_templates/: breadcrumbs.html
ovito-v3.10.6-modified-source/doc/manual/advanced_topics/: animation.rst  aspherical_particles.rst  clone_pipeline.rst  code_generation.rst  customize_init_state.rst  data_plot.rst  index.rst  remote_file_access.rst  remote_rendering.rst  scale_bar.rst  transparent_particles.rst  viewport_layouts.rst
ovito-v3.10.6-modified-source/doc/manual/development/: build_linux.rst  build_macosx.rst  build_windows.rst  index.rst  requirements.rst
ovito-v3.10.6-modified-source/doc/manual/html/: index.html  introduction.html  new_features.html  objects.inv  searchindex.js
ovito-v3.10.6-modified-source/doc/manual/html/advanced_topics/: animation.html  data_plot.html  remote_file_access.html  transparent_particles.html
ovito-v3.10.6-modified-source/doc/manual/html/development/: build_linux.html  build_macosx.html
ovito-v3.10.6-modified-source/doc/manual/html/licenses/: FDL.html  GPL.html  boost.html  geogram.html  kissfft.html  libsodium.html  netcdf.html  numpy.html  openssl.html  pegtl.html  pybind11.html  qcprot.html  qwt.html  tachyon.html  visrtx.html  voroplusplus.html  xdrfile.html
ovito-v3.10.6-modified-source/doc/manual/html/python/: genindex.html  index.html
ovito-v3.10.6-modified-source/doc/manual/html/reference/: index.html
ovito-v3.10.6-modified-source/doc/manual/html/tutorials/: index.html  remote_rendering.html
ovito-v3.10.6-modified-source/doc/manual/licenses/: FDL.rst  GPL.rst  GSD.rst  PTM.rst  PySide6.instructions.rst  Qt6.instructions.rst  boost.rst  ffmpeg.instructions.rst  geogram.rst  glm.rst  hdf5.rst  index.rst  ispc.rst  kissfft.rst  libsodium.rst  libssh.instructions.rst  muparser.rst  netcdf.rst  numpy.rst  openssl.rst  ovito_legacy.rst  pegtl.rst  pybind11.rst  qcprot.rst  qwt.rst  rapidyaml.rst  tachyon.rst  traits.rst  visrtx.rst  voroplusplus.rst  xdrfile.rst
ovito-v3.10.6-modified-source/doc/manual/reference/: index.rst
ovito-v3.10.6-modified-source/doc/manual/tutorials/: index.rst  marker_particles.rst  remote_rendering.rst  turntable_animation.rst
ovito-v3.10.6-modified-source/doc/manual/usage/: data_model.rst  export.rst  import.rst  index.rst  miscellaneous.rst  pipeline.rst  rendering.rst  viewports.rst
ovito-v3.10.6-modified-source/examples/data/: shear.dump  shear.ovito
ovito-v3.10.6-modified-source/src/: CMakeLists.txt
ovito-v3.10.6-modified-source/src/ovito/: CMakeLists.txt
ovito-v3.10.6-modified-source/src/ovito/core/: CMakeLists.txt  Core.h  ForwardDecl.h
ovito-v3.10.6-modified-source/src/ovito/correlation/: CMakeLists.txt  SpatialCorrelationFunctionModifier.cpp  SpatialCorrelationFunctionModifier.h
ovito-v3.10.6-modified-source/src/ovito/crystalanalysis/: CMakeLists.txt  CrystalAnalysis.h
ovito-v3.10.6-modified-source/src/ovito/delaunay/: CMakeLists.txt  DelaunayTessellation.cpp  DelaunayTessellation.h  ManifoldConstructionHelper.h
ovito-v3.10.6-modified-source/src/ovito/galamost/: CMakeLists.txt  GALAMOSTImporter.cpp  GALAMOSTImporter.h
ovito-v3.10.6-modified-source/src/ovito/grid/: CMakeLists.txt  Grid.h
ovito-v3.10.6-modified-source/src/ovito/gui/: CMakeLists.txt
ovito-v3.10.6-modified-source/src/ovito/mesh/: CMakeLists.txt  Mesh.h
ovito-v3.10.6-modified-source/src/ovito/netcdf/: AMBERNetCDFExporter.cpp  AMBERNetCDFExporter.h  AMBERNetCDFImporter.cpp  AMBERNetCDFImporter.h  CMakeLists.txt
ovito-v3.10.6-modified-source/src/ovito/opengl/: CMakeLists.txt  OffscreenInteractiveOpenGLSceneRenderer.cpp  OffscreenInteractiveOpenGLSceneRenderer.h  OffscreenOpenGLSceneRenderer.cpp  OffscreenOpenGLSceneRenderer.h  OpenGLCylinderPrimitive.cpp  OpenGLDepthTextureBlitter.cpp  OpenGLDepthTextureBlitter.h  OpenGLHelpers.h  OpenGLImagePrimitive.cpp  OpenGLLinePrimitive.cpp  OpenGLMarkerPrimitive.cpp  OpenGLMeshPrimitive.cpp  OpenGLParticlePrimitive.cpp  OpenGLResourceManager.cpp  OpenGLResourceManager.h  OpenGLSceneRenderer.cpp  OpenGLSceneRenderer.h  OpenGLShaderHelper.cpp  OpenGLShaderHelper.h  OpenGLTexture.h  PickingOpenGLSceneRenderer.cpp  PickingOpenGLSceneRenderer.h
ovito-v3.10.6-modified-source/src/ovito/oxdna/: CMakeLists.txt  NucleotidesVis.cpp  NucleotidesVis.h  OXDNAImporter.cpp  OXDNAImporter.h
ovito-v3.10.6-modified-source/src/ovito/particles/: CMakeLists.txt  Particles.h
ovito-v3.10.6-modified-source/src/ovito/stdmod/: CMakeLists.txt  StdMod.h
ovito-v3.10.6-modified-source/src/ovito/stdobj/: CMakeLists.txt  StdObj.h
ovito-v3.10.6-modified-source/src/ovito/vorotop/: CMakeLists.txt  Filter.cpp  Filter.h  VoroTopModifier.cpp  VoroTopModifier.h  VoroTopPlugin.h
ovito-v3.10.6-modified-source/src/ovito/vulkan/: CMakeLists.txt  OffscreenVulkanSceneRenderer.cpp  OffscreenVulkanSceneRenderer.h  VulkanContext.cpp  VulkanContext.h  VulkanCylinderPrimitive.cpp  VulkanImagePrimitive.cpp  VulkanLinePrimitive.cpp  VulkanMeshPrimitive.cpp  VulkanParticlePrimitive.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSceneRenderer.cpp  VulkanSceneRenderer.h
ovito-v3.10.6-modified-source/src/ovito_exe/: CMakeLists.txt  Main.cpp
ovito-v3.10.6-modified-source/src/ovito_exe/resources/: Info.plist  ovito.aps
ovito-v3.10.6-modified-source/src/ovito_exe/wasm/: index.html  wasm_shell.html
(+2051 files in other folders)
